tests/invalid/for_loop_target_not_var_or_tuple/main.py
def run_case() -> None:
    for [x] in [[1], [2]]:
        print(x)

if __name__ == "__main__":
    run_case()
